Fix OAuth2 integration in Swagger UI
